# customerio-python

./: .gitignore  .gitpod.yml  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: codeql.yml  main.yml  publish.yml
customerio/: __init__.py  __version__.py  api.py  client_base.py  constants.py  customerio.py  regions.py  track.py
examples/processing_large_csv/: cio_csv_processor.py  cio_event_manager.py  readme.MD
tests/: server.pem  server.py  test_api.py  test_client_base.py  test_customerio.py
